--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Petemoss&family=Roboto:ital,wght@0,100..900;1,100..900&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+    <link 
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" 
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="envelope">
+        <div class="pin"></div>
         <div class="envelope-lid"></div>
         <div class="envelope-lid envelope-lid-secondary"></div>
         <div class="card-wrapper">
@@ -26,15 +30,19 @@
                     <div class="card-side card-side-secondary"></div>
                 </div>
                 <div class="card-body">
-                    <p>To my orange,</p>
-                    <p>From the moment I first saw you, I knew I wanted to smell
-                        your farts forever. Here's to a lifetime of love, laughter, and questionable air quality —
-                    </p>
+                    <p>To puenisrk,</p>
+                    <p class="th" style="font-size: 9px;">ขอให้เป็น 25 ที่ดีสำหรับเธอนะ มีความสุขมากๆไม่ใช่แค่ในวันเกิดแต่ขอให้มีความสุขตลอดไปเลยนะ 
+                        ขอให้อะไรที่ไม่ดีๆ หายออกไปจากชีวิตเธอให้หมดเลย ทุกๆ ความโศกความเศร้า ทุกๆเรื่องที่เธอกำลังแบกรับมันอยู่ ขอให้มันเบาบางลงนะ <br>
+                        สุดท้ายนี่อาจจะเป็นขอขวัญที่ไม่ได้มีค่าอะไรมาก และการ์ดที่ไม่ได้สวยมากนักแต่เราตั้งใจทำขึ้นมา และอยากที่จะให้เธอนะ</p>
                     <p>Happy Birthday!</p>
+                </div>
+                <div class="card-footer">
+                    <p style="letter-spacing: -2;">P<span style="font-size: 4px; font-weight: 500;">ond</span></p>
                 </div>
             </div>
         </div>
-        <div class="kuromi-ringring"></div> </div>
+        <div class="kuromi-ringring"></div> 
+    </div>
     <script  src="./script.js"></script>
 </body>
 </html>
