--- a/puenisrk-card.html
+++ b/puenisrk-card.html
@@ -31,8 +31,10 @@
                     <p>To puenisrk,</p>
                     <p class="th" style="font-size: 9px;">ขอบคุณวันนี้เมื่อ 25 ปีที่แล้วนะที่ได้มีเธอขึ้นมาบนโลกนี้ ขอให้เป็น 25
                         ที่ดีสำหรับเธอนะ มีความสุขมากๆไม่ใช่แค่ในวันเกิดแต่ขอให้มีความสุขตลอดไปเลยนะ ขอให้เจอแต่สิ่งที่ทำให้ชีวิตสดใส
-                        ขอให้อะไรที่ไม่ดีๆ หายออกไปจากชีวิตเธอให้หมดเลย ทุกๆ ความโศกความเศร้า ทุกๆเรื่องที่เธอกำลังแบกรับมันอยู่ ขอให้มันเบาบางลงนะ ดูแลสุขภาพตัวเองดีๆด้วยนะ •⩊• <br><br>
-                        สุดท้ายนี่อาจจะเป็นขอขวัญที่ไม่ได้มีค่าอะไรมาก และการ์ดที่ไม่ได้สวยมากนักแต่เราตั้งใจทำขึ้นมา และอยากที่จะให้เธอนะ</p>
+                        ขอให้อะไรที่ไม่ดีๆ หายออกไปจากชีวิตเธอให้หมดเลย ทุกๆ ความโศกความเศร้า<br>
+                        ทุกๆ เรื่องที่เธอกำลังแบกรับมันอยู่ ขอให้มันเบาบางลงนะ ขอให้น้องมึนกลับมาแข็งแรงๆ นะ
+                        ดูแลสุขภาพตัวเองดีๆด้วย •⩊• <br><br>
+                        ขอขวัญอาจจะไม่ได้มีค่าอะไรมาก การ์ดไม่ได้สวยมากนักแต่เราตั้งใจทำขึ้นมา และอยากที่จะมอบมันให้เธอนะ</p>
                     <p>Happy Birthday!</p>
                 </div>
                 <div class="card-footer">
